docs/sf-export/sfdx-raw/objects/SMS__c/SMS__c.object-meta.xml
<CustomObject>
    <label>SMS</label>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>