docs/sf-export/sfdx-raw/objects/SMS__c/fields/From_Phone__c.field-meta.xml
<CustomField>
    <fullName>From_Phone__c</fullName>
    <label>From Phone</label>
    <type>Phone</type>
</CustomField>