docs/sf-export/sfdx-raw/objects/SMS__c/fields/Is_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Is_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Inbound</label>
    <type>Checkbox</type>
</CustomField>