docs/sf-export/sfdx-raw/objects/SMS__c/fields/Outbound_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Failure_Reason__c</fullName>
    <label>Outbound Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>