docs/sf-export/sfdx-raw/objects/SMS__c/fields/To_Phone__c.field-meta.xml
<CustomField>
    <fullName>To_Phone__c</fullName>
    <label>To Phone</label>
    <type>Phone</type>
</CustomField>