docs/sf-export/sfdx-raw/objects/SMS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Phone__c</columns>
    <columns>Message_Body__c</columns>
    <columns>To_Phone__c</columns>
    <columns>Is_Inbound__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>